discussion/kv_engine/156979/156979_rev1_discussion.txt
======================================================================================================================
DESCRIPTION:

Testing: Use DenseHistogram for MFU in eviction pager

Change-Id: I76312e5b3630b431338447df96931fa034d3cd51

======================================================================================================================
COMMENTS
======================================================================================================================
Author: James H
Date: 2021-07-05 13:31:54.000000000
Message: 
Uploaded patch set 1.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2021-07-05 13:40:52.000000000
Message: 
Patch Set 1: Verified-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/10385/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/item_eviction.h:120:5: error: no template named "DenseHistogram" [clang-diagnostic-error]
    DenseHistogram<uint8_t> freqHistogram;
    ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/10385/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/item_eviction.h:120:5:
error: no template named "DenseHistogram" [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/10385/ )

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/37500/ : FAILURE

Compile error at c:\jenkins\workspace\kv_engine-windows-master\kv_engine\engines\ep\src\item_eviction.h(120): error C2143: syntax error: missing ";" before "<" ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/37500/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/31985/ : FAILURE

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-master/kv_engine/engines/ep/src/item_eviction.h:120:5:
error: no template named "DenseHistogram"
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/31985/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/12112/ : FAILURE

Compile error at [2021-07-05T13:34:03.953Z] ../kv_engine/engines/ep/src/item_eviction.h:120:5:
error: ?DenseHistogram? does not name a type; did you mean ?HdrHistogram??
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/12112/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/12455/ : FAILURE

Compile error at [2021-07-05T13:33:06.725Z] ../kv_engine/engines/ep/src/item_eviction.h:120:5:
error: no template named "DenseHistogram"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/12455/ )

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/11040/ : FAILURE

Compile error at [2021-07-05T13:33:49.741Z] ../kv_engine/engines/ep/src/item_eviction.h:120:5:
error: no template named "DenseHistogram"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/11040/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/11955/ : FAILURE

Compile error at [2021-07-05T13:33:25.228Z] ../kv_engine/engines/ep/src/item_eviction.h:120:5:
error: ?DenseHistogram? does not name a type; did you mean ?HdrHistogram??
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/11955/ )

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/20005/ : FAILURE

Compile error at [2021-07-05T13:33:35.914Z] ../kv_engine/engines/ep/src/item_eviction.h:120:5:
error: no template named "DenseHistogram"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/20005/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/9014/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
